# picus

./: .dockerignore  .gitignore  .woodpecker.yml  Cargo.toml  Dockerfile  Dockerfile.distroless.multiarch  Dockerfile.multiarch  Justfile  LICENSE  Makefile  README.md  aws_agent_example.yml  deny.toml
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json  ubuntu.sources
src/: agent.rs  aws.rs  env.rs  hetzner.rs  main.rs  strategy.rs
