[package]
name = "picus"
description ="Dynamically creates agent for Woodpecker CI in the cloud"
version = "0.5.2"
edition = "2021"
license = "MIT"

[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
hcloud = { version = "0.13.0", default-features = false, features = ["rustls-tls"] }
async-trait = "0.1.57"
handlebars = "4.3.4"
go-parse-duration = "0.1"
env_logger = "0.10.0"
log = "0.4.17"
aws-sdk-ec2 = "0.23.0"
aws-config = "0.53.0"

[dev-dependencies]
mockall = "0.11.2"
test-log = "0.2.11"
