[package]
name = "picus"
description ="Dynamically creates agent for Woodpecker CI in the cloud"
version = "0.8.1"
edition = "2021"
license = "MIT"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hcloud = { version = "0.25", default-features = false, features = ["rustls-tls"] }
async-trait = "0.1"
handlebars = "6.2"
go-parse-duration = "0.1"
env_logger = "0.11"
log = "0.4"
aws-sdk-ec2 = "1"
aws-config = "1"

[dev-dependencies]
mockall = "0.12"
test-log = "0.2.11"
